# vtprotobuf

cmd/protoc-gen-go-vtproto/: BUILD.bazel  main.go
generator/: generatedfile.go
