load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_go//proto:compiler.bzl", "go_proto_compiler")

go_proto_compiler(
    name = "go_proto_vtproto",
    options = [
        "features=marshal+unmarshal+size+pool",
    ],
    plugin = ":protoc-gen-go-vtproto",
    suffix = "_vtproto.pb.go",
    visibility = ["//visibility:public"],
)

